# Syphax-Web

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  index.c
.github/workflows/: ci.yml
TODO/: 2026-04-21_18-44-24_library-refactor.md
cmake/: syphax_webConfig.cmake.in
examples/: 01_http.c  01_simple.c  02_https.c  02_ssl.c  03_complex_static.c  03_static_site.c  04_complex_dynamic.c  04_live_queue.c  05_folder_app.c  06_session_login.c  07_database.c  example_common.h  static.c
examples/advanced/: app.css  app.js  index.html
examples/shared/: style.css
include/: sw_db.h  sw_export.h  sw_html.h  sw_js.h  sw_server.h  sw_translator.h  sw_utility.h
include/syphax/web/: sw_html.h  sw_server.h  sw_translator.h  sw_types.h  sw_utility.h
resources/: style.css  translations.json
src/: sw_array.h  sw_backend.h  sw_backend_epoll.c  sw_backend_wsapoll.c  sw_db.c  sw_db_internal.h  sw_db_postgres.c  sw_db_sqlite.c  sw_html.c  sw_html.h  sw_internal.h  sw_js.c  sw_server.c  sw_server.h  sw_time.h  sw_translator.c  sw_translator.h  sw_types.h  sw_utility.c  sw_utility.h
tests/: test_suite.c
tools/: server_stress.c
